Edit profile works, handle backend cases and changes in api
